--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,12 +56,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Asap
+      fonts:
+        - asset: fonts/Asap-Regular.ttf
+        - asset: fonts/Asap-Italic.ttf
+          style: italic
+        - asset: fonts/Asap-Bold.ttf
+          weight: 700
+        - asset: fonts/Asap-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Asap-Medium.ttf
+          weight: 500
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
