--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Flutter",
             "type": "dart",
             "request": "launch",
-            "program": "lib/home/main.dart"
+            "program": "lib/main.dart"
         },
         {
             "name": "Flutter",
