--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   configurable_expansion_tile: ^1.0.0
   http: ^0.12.0+4
   pull_to_refresh: ^1.5.8
+  dropdown_banner: ^1.4.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
